<?php

class Category {
    // logique metier pour le modele Category
};