<?php

class Comment {
    // logique metier pour le modele Comment
};