<?php

class Follow {
    // logique metier pour le modele Follow
};
