<?php

class Like {
    // logique metier pour le modele Like
};