<?php 

class User {
    // logique metier pour le modele User
};